--- a/public/assets/css/style-main.css
+++ b/public/assets/css/style-main.css
@@ -642,11 +642,13 @@ button.btn-search {
 
 .search-row {
 	margin-top: 0;
-	max-width: 900px;
+	/* max-width: 900px; */
 }
 
 .search-row .btn-search {
-	border-radius: 0 !important;
+	border-radius: 5px !important;
+	border: 2px solid #8358d0;
+	min-width: 200px;
 }
 
 .intro .search-row {
