--- a/public/css/app.rtl.css
+++ b/public/css/app.rtl.css
@@ -20678,8 +20678,7 @@ html[dir="rtl"] body .intro h1, .intro html[dir="rtl"] body h1, html[dir="rtl"] 
 }
 
 .search-row .search-col .form-control, .search-row button.btn-search {
-	border-radius: 0;
-	border: 0;
+	border-radius: 0; 
 	height: 48px;
 	margin-bottom: 0;
 }
@@ -29118,7 +29117,9 @@ button.btn-search {
 }
 
 .search-row .btn-search {
-	border-radius: 0 !important;
+	border-radius: 5px !important;
+	border: 2px solid #8358d0;
+	min-width: 200px;
 }
 
 .intro .search-row {
