--- a/public/assets/css/style-main.css
+++ b/public/assets/css/style-main.css
@@ -361,7 +361,7 @@ a:hover, a:focus {
 
 /* Inner box */
 .inner-box {
-	background: #f5f5f5 none repeat scroll 0 0;
+	background: #f5f5f5 url('/images/bg/line-cc.svg') repeat scroll 0 0;
 	margin-bottom: 0;
 	padding: 20px 15px;
 }
