--- a/public/assets/bootstrap/css/bootstrap.rtl.css
+++ b/public/assets/bootstrap/css/bootstrap.rtl.css
@@ -4857,7 +4857,7 @@ input[type="button"].btn-block {
 
 .badge-light {
   color: #212529;
-  background-color: #f8f9fa;
+  background-color: #e1edf9s;
 }
 
 .badge-light[href]:hover, .badge-light[href]:focus {
