--- a/public/assets/css/style-main.css
+++ b/public/assets/css/style-main.css
@@ -361,9 +361,12 @@ a:hover, a:focus {
 
 /* Inner box */
 .inner-box {
-	background: #f5f5f5 url('/images/bg/line-cc.svg') repeat scroll 0 0;
+	background: #f5f5f5 repeat scroll 0 0;
 	margin-bottom: 0;
 	padding: 20px 15px;
+}
+#homepage .inner-box {
+	background: #f5f5f5 url('/images/bg/line-cc.svg') repeat scroll 0 0;
 }
 
 .inner-box.default-inner-box,
@@ -485,6 +488,22 @@ a:hover, a:focus {
 }
 .page-bottom-info {
 	background: #7324bc;
+}
+
+#homepage .custem-search.input-group {
+	border: 2px solid #e2e2e2;
+	border-radius: 6px;
+}
+#homepage .custem-search.input-group input {
+	border: 0px;
+	height: 46px;
+	padding: 0px 10px;
+	outline: none;
+	box-shadow: none;
+}
+#homepage .custem-search.input-group .input-group-text {
+	border: none;
+	background: none;
 }
 
 /* [OTHERS] */
