--- a/public/assets/css/rtl/style-main.css
+++ b/public/assets/css/rtl/style-main.css
@@ -623,12 +623,14 @@ button.btn-search {
 	max-width: 900px;
 }
 
-.search-row .btn-search {
+#homepage .search-row .btn-search {
 	border-radius: 5px !important;
 	border: 2px solid #8358d0;
 	min-width: 200px;
 }
-
+.search-row .form-control {
+	border: 0px;
+}
 .intro .search-row {
 	max-width: none;
 }
@@ -1077,7 +1079,7 @@ nav.search-breadcrumb > ol.breadcrumb {
 
 .select2-dropdown {
 	box-shadow: 0 4px 3px #ededed;
-	padding: 8px;
+	/* padding: 8px; */
 }
 
 .select2-results__option {
@@ -1085,8 +1087,10 @@ nav.search-breadcrumb > ol.breadcrumb {
 }
 
 .select2-container--default .select2-results__option--highlighted[aria-selected] {
-	background-color: #fafafa;
-	color: #555;
+	background-color: #764fbc;
+	color: #fff;
+	border-radius: 4px;
+	box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.16);
 }
 
 /* GOOGLE AUTO SUGGEST / Z-INDEX */
